import * as React from "react";
import { createStackNavigator } from "@react-navigation/stack";
import Listing from "../screen/ListingResidential";
import Meeting from "../screen/Meeting";
import CustomerMeeting from "../screen/contacts/CustomerMeeting";
import PropDetailsFromListing from "../screen/PropDetailsFromListing";
import PropDetailsFromListingForSell from "../screen/PropDetailsFromListingForSell";
import ContactsTopTab from "./ContactsTopTab";
import CommercialRentPropDetails from "../screen/commercial/rent/CommercialRentPropDetails";
import CommercialSellPropDetails from "../screen/commercial/sell/CommercialSellPropDetails";
import AddNewCustomer from "../screen/contacts/AddNewCustomer";
import ContactLocalityDetailsForm from "../screen/contacts/ContactLocalityDetailsForm";
import ContactResidentialPropertyDetailsForm from "../screen/contacts/ContactResidentialPropertyDetailsForm";
import ContactRentDetailsForm from "../screen/contacts/ContactRentDetailsForm";
import AddNewCustomerRentResidentialFinalDetails from "../screen/contacts/AddNewCustomerRentResidentialFinalDetails";
import ContactBuyResidentialDetailsForm from "../screen/contacts/ContactBuyResidentialDetailsForm";
import AddNewCustomerBuyResidentialFinalDetails from "../screen/contacts/AddNewCustomerBuyResidentialFinalDetails";
import CustomerCommercialPropertyDetailsForm from "../screen/contacts/CustomerCommercialPropertyDetailsForm";
import AddNewCustomerCommercialRentFinalDetails from "../screen/contacts/AddNewCustomerCommercialRentFinalDetails";
import CustomerCommercialRentDetailsForm from "../screen/contacts/CustomerCommercialRentDetailsForm";
import CustomerCommercialBuyDetailsForm from "../screen/contacts/CustomerCommercialBuyDetailsForm";
import AddNewCustomerCommercialBuyFinalDetails from "../screen/contacts/AddNewCustomerCommercialBuyFinalDetails";
import CustomerDetailsResidentialRentFromList from "../screen/contacts/CustomerDetailsResidentialRentFromList";
import CustomerDetailsResidentialBuyFromList from "../screen/contacts/CustomerDetailsResidentialBuyFromList";

import CustomerDetailsCommercialRentFromList from "../screen/contacts/CustomerDetailsCommercialRentFromList";
import CustomerDetailsCommercialBuyFromList from "../screen/contacts/CustomerDetailsCommercialBuyFromList";
import PropertyListForMeeting from "../screen/contacts/PropertyListForMeeting";
import CustomerMeetingDetails from "../screen/contacts/CustomerMeetingDetails";
import AddNewPropStackScreens from "./AddNewPropStackScreens"

const Stack = createStackNavigator();
export const hideTabBarComponents = ["ProductDetails"];

const AddNewContactsStackScreens = () => {
    return (
        <Stack.Navigator
            screenOptions={{
                // headerShown: false,
                headerTitleAlign: "center",
                // headerTintColor: "#fff",
                headerStyle: {
                    backgroundColor: "#ffffff"
                },
                headerBackTitleVisible: false,
                headerTintColor: "rgba(105,105,105, .9)"
            }}
        >

            {/* <Stack.Screen
        name="Card"
        component={Card}
        options={{ title: "Meeting Schedules" }}
      /> */}


            <Stack.Screen
                name="AddCustomer"
                component={AddNewCustomer}
                navigationOptions={{ tabBarVisible: false }}
                // options={{ headerShown: false, }}
                options={{
                    title: "Add New Customer",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                }}
            />
            <Stack.Screen
                name="ContactLocalityDetailsForm"
                component={ContactLocalityDetailsForm}
                options={{ 
                    title: "Locality Details",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                 }}
            />
            <Stack.Screen
                name="ContactResidentialPropertyDetailsForm"
                component={ContactResidentialPropertyDetailsForm}
                options={{ 
                    title: "Property Details",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                     }}
            />
            <Stack.Screen
                name="ContactRentDetailsForm"
                component={ContactRentDetailsForm}
                options={{ 
                    title: "Rent Details",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                 }}
            />
            <Stack.Screen
                name="AddNewCustomerRentResidentialFinalDetails"
                component={AddNewCustomerRentResidentialFinalDetails}
                options={{ 
                    title: "Customer Final Details",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                 }}
            />

            <Stack.Screen
                name="ContactBuyResidentialDetailsForm"
                component={ContactBuyResidentialDetailsForm}
                options={{ title: "Buy Details" ,
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                }}
            />

            <Stack.Screen
                name="AddNewCustomerBuyResidentialFinalDetails"
                component={AddNewCustomerBuyResidentialFinalDetails}
                options={{ 
                    title: "Customer Final Details",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                 }}
            />

            <Stack.Screen
                name="CustomerCommercialPropertyDetailsForm"
                component={CustomerCommercialPropertyDetailsForm}
                options={{ 
                    title: "Customer Property Details",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                     }}
            />

            <Stack.Screen
                name="AddNewCustomerCommercialRentFinalDetails"
                component={AddNewCustomerCommercialRentFinalDetails}
                options={{ 
                    title: "Customer Final Details",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                 }}
            />

            <Stack.Screen
                name="CustomerCommercialRentDetailsForm"
                component={CustomerCommercialRentDetailsForm}
                options={{ title: "Rent Details",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                }}
            />

            <Stack.Screen
                name="CustomerCommercialBuyDetailsForm"
                component={CustomerCommercialBuyDetailsForm}
                options={{ title: "Buy Details",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                 }}
            />
            <Stack.Screen
                name="AddNewCustomerCommercialBuyFinalDetails"
                component={AddNewCustomerCommercialBuyFinalDetails}
                options={{
                    title: "Customer Final Details",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                }}
            />

        </Stack.Navigator>
    );
};

export default AddNewContactsStackScreens;
